W2 final section with denormalization

--- a/week_2/week_2.ipynb
+++ b/week_2/week_2.ipynb
@@ -20,6 +20,8 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "\n",
+    "import numpy as np\n",
+    "\n",
     "import week_2.backstage.plots as plots\n",
     "import week_2.tests.hub as tests\n",
     "from week_2.backstage.load_data import load_data"
@@ -394,6 +396,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Submission\n",
+    "Submit your solution of `model.py` to AIS. You have to complete all four methods from __PA 2.9__ and the SGD method from __PA 2.13__. If you are able to pass the tests, you should be alright. Make sure that the work you submit is yours and yours only.\n",
+    "\n",
     "## Case Study: House Sales Prices\n",
     "\n",
     "We can apply our linear regression model to real data. Kaggle has a nice dataset with house sales prices for King County, USA. We prepared these data in `data/houses.csv` file. It contains five columns:\n",
@@ -451,6 +456,30 @@
     "\n",
     "This new value $z$ is then used in computation. We do the same for all features as well, with unique $\\mu$ and $\\sigma$ for each feature. We have prepared this functionality in our `load_data` function from `backstage/load_data.py` file. You can simply call it by adding additional argument `normalize=True`. Try running the code cell above with this change and see what happens.\n",
     "\n",
+    "Normalization should make the learning work and the loss function should be approximately $0.45$. However with normalizaed prices the predictions are also made in the normalized scale. If we want to interpret the prediction in the original scale, we need to rescale it back: $x = z\\sigma + \\mu$. You can see the original prices and the prices your model predicts for some samples below:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_data = load_data('houses.csv')\n",
+    "mu, sigma = np.mean(true_data.y), np.std(true_data.y)\n",
+    "\n",
+    "true_prices = true_data.y[:10]\n",
+    "predicted_prices = model.predict(data.x[:10]) * sigma + mu\n",
+    "\n",
+    "print('True price\\t| Predicted price')\n",
+    "for true, predicted in zip(true_prices, predicted_prices):\n",
+    "    print(f'{true:7.0f}\\t\\t| {predicted:7.0f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Key Concepts from This Week\n",
     "\n",
     "- Linear regression\n",
