--- a/week_2/week_2.ipynb
+++ b/week_2/week_2.ipynb
@@ -420,13 +420,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from solutions.week_2.model import LinearRegressionModel\n",
+    "from week_2.model import LinearRegressionModel\n",
     "    \n",
     "learning_rate = 0.003\n",
     "num_epochs = 10\n",
     "batch_size = 50\n",
     "\n",
-    "data = load_data('houses.csv', normalize=True)\n",
+    "data = load_data('houses.csv')\n",
     "\n",
     "model = LinearRegressionModel(\n",
     "    input_dim=4,\n",
