--- a/week_1/week_1.ipynb
+++ b/week_1/week_1.ipynb
@@ -278,11 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  5 15]\n",
+      "\n",
+      "[1 5 4]\n",
+      "\n",
+      "7\n",
+      "\n",
+      "3.1622776601683795\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -302,9 +316,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2,)\n",
+      "(2, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating matrices\n",
     "# First way:\n",
@@ -330,13 +353,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5 11]\n",
+      "[[ 5]\n",
+      " [11]]\n",
+      "[ 5 11]\n",
+      "[[ 5]\n",
+      " [11]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Then we can multiply them with W using np.matmul or @ matrix multiplication operator\n",
     "print(W @ a)\n",
-    "print(W @ b)\n"
+    "print(W @ b)\n",
+    "\n",
+    "print(np.dot(W, a))\n",
+    "print(np.dot(W, b))\n"
    ]
   },
   {
@@ -350,12 +389,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[2 6]\n",
+      "\n",
+      "[-3  9]\n",
+      "\n",
+      "[ 1 10]\n",
+      "\n",
+      "[2 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "C = ...\n",
-    "d = ...\n"
+    "C = np.array([\n",
+    "    [0, 2], \n",
+    "    [1, 2]\n",
+    "])\n",
+    "d = np.array([4, 1])\n",
+    "\n",
+    "print()\n",
+    "print(np.dot(C, d))\n",
+    "print()\n",
+    "print(np.dot(d.T, C) - d.T)\n",
+    "print()\n",
+    "print(np.dot(C.T, d))\n",
+    "print()\n",
+    "print(np.dot(C, d.T))\n"
    ]
   },
   {
