--- a/week_3/week_3.ipynb
+++ b/week_3/week_3.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "You need to run this cell for the code in following cells to work.\n",
@@ -15,7 +24,9 @@
     "%autoreload 2\n",
     "\n",
     "import sys\n",
-    "sys.path.append('..')"
+    "sys.path.append('..')\n",
+    "\n",
+    "from week_3.backstage.load_data import load_data"
    ]
   },
   {
@@ -124,7 +135,7 @@
     "\\frac{dL}{d\\mathbf{z}_K} = \\frac{dL}{d\\mathbf{h}_K} \\odot \\sigma_K'(\\mathbf{z}_K)\n",
     "\\end{equation}\n",
     "\n",
-    "The term $\\frac{dL}{d\\mathbf{h}_K}$ is calculated according to the definition of loss function. If you are interested how these equations come to be, check out the _Further Reading_ section of this notebook.\n",
+    "The term $\\frac{dL}{d\\mathbf{h}_K}$ is calculated according to the definition of loss function. If you are interested how these equations came to be, check out the _Further Reading_ section of this notebook.\n",
     "\n",
     "## Classification\n",
     "\n",
@@ -174,7 +185,7 @@
     "\n",
     "This just follows the general equation of MLP we showed above. The hidden layer $\\mathbf{h}$ has a customizable size that can be set before the training. The output layer will have a size of 3, one output neuron for each _Iris_ class.\n",
     "\n",
-    "We will use logistic regression function for both $\\sigma_1$ and $\\sigma_2$. In the first case it simply serves as a non-linear function. In second case, we also utilize that it squishes the $\\mathbf{z}_2$ into $(0, 1)$ range and thus we can interpret the outputs $\\mathbf{\\hat{y}}$ as probabilities. The $j$-th element of $\\mathbf{\\hat{y}}$ tells us what is the probability that the sample belongs to the $j$-th class. E.g. with ${\\mathbf{\\hat{y}} = [0.1, 0.8, 0.3]$ we can say that the model gives 10% probability for the first class, 80% for the second class and 30% for the third class. Note that they do not add up to 100%, this model calculates the probability for each class individually. \n",
+    "We will use logistic regression function for both $\\sigma_1$ and $\\sigma_2$. In the hidden layer, it simply serves as a non-linear function. In the output layer, it squishes the $\\mathbf{z}_2$ into $(0, 1)$ range and thus we can interpret the outputs $\\mathbf{\\hat{y}}$ as probabilities. The $j$-th element of $\\mathbf{\\hat{y}}$ tells us what is the probability that the sample belongs to the $j$-th class. E.g. with ${\\mathbf{\\hat{y}} = [0.1, 0.8, 0.3]$ we can say that the model gives 10% probability for the first class, 80% for the second class and 30% for the third class. Note that they do not add up to 100%, this model calculates the probability for each class independently. \n",
     "\n",
     "The definition of logistic function $\\sigma$ is as follows:\n",
     "\n",
@@ -182,7 +193,7 @@
     "\\sigma(x) = \\frac{1}{1 + e^{-x}}\n",
     "\\end{equation}\n",
     "\n",
-    "Finally, we also need to define our loss function. We need to have a loss function that will compare the predicted probabilities with the true value - the true class of the sample. To do so we will apply _mean squared error_ loss function on the predicted values $\\mathbf{\\hat{y}}$ and the true value encoded with _one-hot encoding_. With one-hot encoding of $j$-th class we have a vector of size $C$, where all components are $0$, except for the $j$-th component, which is $1$.\n",
+    "Finally, we also need to define our loss function. We need to have a loss function that will compare the predicted probabilities with the true value - the true class of the sample. To do so we will apply _mean squared error_ loss function on the predicted values $\\mathbf{\\hat{y}}$ and the true value encoded with _one-hot encoding_. One-hot encoding of $j$-th class makes a vector of size $C$, where all components are $0$, except for the $j$-th component, which is $1$.\n",
     "\n",
     "_Example:_ $\\mathbf{\\hat{y}}$ is a prediction that the model calculates. $\\mathbf{y}$ is a true label we want to achieve. In this case the second element is $1$, so it encodes the second class -- _Iris Versicolour_.\n",
     "\n",
@@ -198,7 +209,7 @@
     "\n",
     "The overall loss function is defined as an average of loss functions for all the samples, similarly as before.\n",
     "\n",
-    "__Practical Note:__ MSE is not usually used for classification today, instead we use _softmax_ activation function at the last layer. We use MSE here for simplicity. More information about softmax can be bound in Further Reading section.\n",
+    "__Practical Note:__ Logistic function and MSE are not usually used as activation function and loss function for classification problems. We have better options, but we will use these two in this lab because of their simplicity. In practice, we would use _softmax_ activation and _cross-entropy_ loss function. More information about these two is in the _Further Reading_ section.\n",
     "\n",
     "### Training classifier\n",
     "\n",
@@ -238,37 +249,58 @@
     "\n",
     "### Programming Assignment 3.4: Multilayer Perceptron\n",
     "\n",
-    "With all the important equations defined above, you should now be able to implement a multilayer perceptron model for classification. Hidden layer should have customizable number of neurons, while output layer will have $C$ neurons.\n",
+    "With all the important equations defined above, you should now be able to implement a multilayer perceptron model for classification. Hidden layer should have customizable number of neurons, while output layer will have $C$ neurons. Use `mlp.py` as a starting point:\n",
     "\n",
-    "__3.4.1__ First use the definition of $\\mathbf{z}_1$, $\\mathbf{h}$, $\\mathbf{z}_2$ and $\\mathbf{\\hat{y}}$ to implememnt the `predict` method. You should return the values of all the quantities as suggested in the method signature. The reason for this will be explained later. You should also implement your own activation function `sigma` according to the definition of $\\sigma()$ above.\n",
+    "`__init__`, `init_weights` and `init_biases` serve to initialize the parameters of the model. We can not use the zero initialization for models with hidden layers. Instead we initialize the weights matrices with random values. We use the Xavier initialization scheme (sometimes also called Glorot initialization) [1].\n",
     "\n",
-    "__3.4.2__ With prediction $\\hat{y}$ ready, you can implement the `loss` function. For that you will also need the `one_hot` method ready. Note, that this method can get several samples at the same time.\n",
+    "`loss`, `stochastic_gradient_descent`, `epoch` and `step` methods should remind you last week's lab. There is nothing new in these, the SGD algorithm reminds the same. For simplicity, we only work with batch size of 1 this week.\n",
     "\n",
-    "__3.4.3__ Then you should implement the training regime. `stochastic_gradient_descent` should be reused from last week's assignment. Similarly `step` method should be easy to implement, with computed gradients it is just a matter of applying them to existing parameters. For simplicity we assume that the batch size is set to $1$ all the time. You can extend the code to handle bigger batch sizes if you will.\n",
+    "`sigma` and `dsigma` are the implementation of $\\sigma$ and $\\sigma'$ functions respectively.\n",
     "\n",
-    "__3.4.4__ The hairiest part of this assignemnt is the `compute_gradients` method. Follow the above mentioned definitions of $\\frac{dL}{d\\mathbf{W}_1}$, $\\frac{dL}{d\\mathbf{b}_1}$, $\\frac{dL}{d\\mathbf{W}_2}$ and $\\frac{dL}{d\\mathbf{b})2}$. Note, that there are quantities that are being use repeatedly, e.g. for both $\\frac{dL}{d\\mathbf{W}_2}$ and $\\frac{dL}{d\\mathbf{b}_2}$ we need to calculate $\\frac{dL}{d\\mathbf{z}_2}$. In cases like these, you should make the calculation only once and then store it to reuse.\n",
+    "You should understand the code we prepared for you before you proceed.\n",
     "\n",
-    "Less obviously, quantities like $\\mathbf{z}_1$, $\\mathbf{h}$ and $\\mathbf{z}_2$ are in the definitions as well. These quantities are calculated in the `predict` method. You should only run this method once and then store these values for later.\n",
+    "#### 3.4.1\n",
     "\n",
-    "Finally, note that the derivatives for first layer parameters depend on the values of the derivatives for second layer parameters. You should always start with the latest parameters (parameters logically closest to the loss function term) and then make your way back. This is called a `backward pass` and it is a part of `backpropagation` algorithm. This algorithm is based on the idea of reusing the calculations from later layers of neural networks to calculate the derivatives of earlier layers. Similarly, you should calculate the derivatives for the first layer at the end and reuse the calculations you have done before as much as possible.\n",
+    "You need to complete the `predict` method. This method implements the _forward pass_ of backpropagation algorithm. First, try to complete the missing values of dimensions of return values in the signature of the method. This should help you realize how are the quantities shaped.\n",
     "\n",
-    "__Numpy note:__ You should use the `*` operator for Hadamard product and the `@` operator for matrix multiplication.\n",
+    "Then calculate the individual quantities following the equations above: $\\mathbf{z}_1$, $\\mathbf{h}$, $\\mathbf{z}_2$ and $\\mathbf{\\hat{y}}$. You should return the values of all the quantities as suggested in the method signature. You can use the `sigma` method for activation function.\n",
     "\n",
-    "Most of the methods are covered with tests. You can run the tests by running `mlp.py`. After you pass all the tests, you can try to run your model in the interactive visualization below."
+    "#### 3.4.2\n",
+    "\n",
+    "Then you need to complete the `gradient` method. This method implements the _backward pass_. When we calculate the derivatives, we go in the opposite direction, i.e. we first calculate the derivatives for the second layer and then we use the intermediate results to calculate the derivatives for the first layer.\n",
+    "\n",
+    "Again, try to complete the missing values of dimensions of return values in the signature of the method. Then follow the above mentioned definitions of $\\frac{dL}{d\\mathbf{W}_1}$, $\\frac{dL}{d\\mathbf{b}_1}$, $\\frac{dL}{d\\mathbf{W}_2}$ and $\\frac{dL}{d\\mathbf{b})2}$. Note, that there are quantities that are being use repeatedly, e.g. for both $\\frac{dL}{d\\mathbf{W}_2}$ and $\\frac{dL}{d\\mathbf{b}_2}$ we need to calculate $\\frac{dL}{d\\mathbf{z}_2}$. In cases like these, you should make the calculation only once and store the results for later.\n",
+    "\n",
+    "Quantities from forward pass $\\mathbf{z}_1$, $\\mathbf{h}$ and $\\mathbf{z}_2$ are in the definitions as well. These quantities are calculated in the `predict` method that is called at the start of `gradient`.\n",
+    "\n",
+    "__Numpy note:__ Use the `*` operator for Hadamard product and the `@` operator for matrix multiplication."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from solutions.week_3.mlp import MultilayerPerceptron\n",
+    "\n",
+    "if True:\n",
+    "    \n",
+    "    dim_input = 4    # 4 features\n",
+    "    dim_hidden = 10  # You can change this\n",
+    "    dim_output = 3   # 3 classes\n",
+    "\n",
+    "    data = load_data('iris.csv', num_classes=dim_output)\n",
+    "    model = MultilayerPerceptron(dim_input, dim_hidden, dim_output)\n",
+    "    #add_magic(model)  # Visualization magic\n",
+    "    model.stochastic_gradient_descent(data.x, data.y)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Exercise 3.5:__ We initialize parameters with random values. Try to change this initialization to zero matrices and vectors. How does this affect the training? Can you find out what is happening during the training and why?\n",
+    "__Exercise 3.5:__ We initialize the weights with random values. Try to change this initialization to zero. How does this affect the training? Can you diagnose what is the problem with this initialization? _Hint:_ Try printing the values for various quantities.\n",
     "\n",
     "## Evaluating models\n",
     "\n",
@@ -309,10 +341,11 @@
    "source": [
     "## Key Concepts from This Week\n",
     "\n",
-    "NLP\n",
-    "Layer\n",
-    "Activation function\n",
-    "Classification\n",
+    "- Multilayer perceptron\n",
+    "- Layer (input, hidden, output)\n",
+    "- Activation function\n",
+    "- Classification\n",
+    "- Random initialization\n",
     "\n",
     "## Further Reading\n",
     "http://neuralnetworksanddeeplearning.com/chap2.html\n",
@@ -322,12 +355,15 @@
     "nieco normalne o aktivacnych funkciach?\n",
     "\n",
     "## Sources\n",
+    "[1] Glorot, X., & Bengio, Y. (2010, March). Understanding the difficulty of training deep feedforward neural networks. In Proceedings of the thirteenth international conference on artificial intelligence and statistics (pp. 249-256).\n",
     "\n",
     "## Correct Answers\n",
     "\n",
     "__E 3.1:__ If $dim(\\mathbf{h}_i)$ is a number of neurons in $i$-th layer, than $\\mathbf{W}_j$ is a matrix with dimensions $ dim(\\mathbf{h}_j) \\times dim(\\mathbf{h}_{j-1})$. $\\mathbf{b}_j$ is a vector with $dim(\\mathbf{h}_j)$ elements.\n",
     "\n",
-    "__E 3.3__ With linear activations the associativity rule can be applied. Consider a MLP model with 3 layers: $\\hat{y} = \\sigma(\\mathbf{W}_2\\ \\sigma(\\mathbf{W}_1\\mathbf{x}))$. We omitted biases for simplicity. With $\\sigma(x) = x$ this can be reduced to $\\hat{y} = \\mathbf{W}_2\\ \\mathbf{W}_1\\mathbf{x}$. We can use associativity an multiply the first two matrices first into: $\\hat{y} = \\mathbf{W}_{12}\\mathbf{x}$. But this is just a _linear regression_ model! By not using non-linear activation functions, we lose the expresivity of the model. Non-linear activation functions are neccessary to model other than linear relations between inputs and outputs."
+    "__E 3.3:__ With linear activations the associativity rule can be applied. Consider a MLP model with 3 layers: $\\hat{y} = \\sigma(\\mathbf{W}_2\\ \\sigma(\\mathbf{W}_1\\mathbf{x}))$. We omitted biases for simplicity. With $\\sigma(x) = x$ this can be reduced to $\\hat{y} = \\mathbf{W}_2\\ \\mathbf{W}_1\\mathbf{x}$. We can use associativity an multiply the first two matrices first into: $\\hat{y} = \\mathbf{W}_{12}\\mathbf{x}$. But this is just a _linear regression_ model! By not using non-linear activation functions, we lose the expresivity of the model. Non-linear activation functions are neccessary to model other than linear relations between inputs and outputs.\n",
+    "\n",
+    "__E 3.5:__ Try printing the values of $\\mathbf{W}_1$ or $\\mathbf{h}$. Notice the repetition. With zero initialization each neuron has the same parameters. During the backward pass, each neuron in the first layer gets the same error signal and each neuron adjusts the parameters in the same way. All the neurons in the first layer are calculating the same information. This first layer is therefore completely redundant and the capacity of the model decreases."
    ]
   },
   {
