--- a/week_3/week_3.ipynb
+++ b/week_3/week_3.ipynb
@@ -326,7 +326,7 @@
    "source": [
     "from week_3.mlp import MultilayerPerceptron\n",
     "    \n",
-    "if True or tests.accuracy_test():\n",
+    "if tests.accuracy_test():\n",
     "    \n",
     "    dim_input = 4\n",
     "    dim_hidden = 10\n",
