--- a/week_3/week_3.ipynb
+++ b/week_3/week_3.ipynb
@@ -200,7 +200,7 @@
     "The loss function for $i$-th sample is then defined as:\n",
     "\n",
     "\\begin{equation}\n",
-    "L^{(i)} = \\frac{\\sum_{j=1}^C{(y_j^{(i)} - \\hat{y}_j^{(i)})^2}}{C}\n",
+    "L^{(i)} = \\frac{\\sum_{j=1}^C{(\\hat{y}_j^{(i)} - y_j^{(i)})^2}}{C}\n",
     "\\end{equation}\n",
     "\n",
     "The overall loss function is defined as an average of loss functions for all the samples, similarly as before.\n",
@@ -212,7 +212,7 @@
     "We need to calculate the derivatives for SGD. Following the general equations from earlier we can define the derivatives of parameters $\\theta = \\{ \\mathbf{W}_1, \\mathbf{b}_1, \\mathbf{W}_2, \\mathbf{b}_2 \\}$ as:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\frac{dL}{d\\mathbf{z}_2} = 2(\\mathbf{y} - \\mathbf{\\hat{y}}) \\odot \\sigma'(\\mathbf{z}_2)\n",
+    "\\frac{dL}{d\\mathbf{z}_2} = 2(\\mathbf{\\hat{y}} - \\mathbf{y}) \\odot \\sigma'(\\mathbf{z}_2)\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
