--- a/week_4/week_4.ipynb
+++ b/week_4/week_4.ipynb
@@ -421,8 +421,11 @@
     "\n",
     "Check out TF [Tutorials](https://www.tensorflow.org/tutorials) and [Guide](https://www.tensorflow.org/guide) for some further reading. Note that all the documents there are in fact Jupyter notebooks, so you can download them and run them here. At this point, you should check:\n",
     "\n",
-    "- _Tutorials > ML basics with Keras_ - for some basic use cases.\n",
-    "- _Guide > Keras_ - for more in-depth explanation.\n",
+    "- _Tutorials > ML basics with Keras_ - for some basic practical use cases.\n",
+    "\n",
+    "And you can also check:\n",
+    "\n",
+    "- _Guide > Keras_ - for more in-depth explanation of how TF works.\n",
     "\n",
     "## Correct Answers\n",
     "\n",
