Additional TF notebook added to further reading section.

--- a/week_4/week_4.ipynb
+++ b/week_4/week_4.ipynb
@@ -427,6 +427,8 @@
     "\n",
     "- _Guide > Keras_ - for more in-depth explanation of how TF works.\n",
     "\n",
+    "You can also check this [notebook](https://colab.research.google.com/drive/1UCJt8EYjlzCs1H1d1X0iDGYJsHKwu-NO) showcasing and explaining additional features.\n",
+    "\n",
     "## Correct Answers\n",
     "\n",
     "__E 4.1:__ Activation function is missing. `Dense` uses linear activation by default. We need to use the `activation` argument to add an activation function. There we can use our own activation functions, such as `sigma` defined previously. Or, we can use some of the pre-programmed activation functions from `tf.keras.activations` module."
