--- a/week_4/week_4.ipynb
+++ b/week_4/week_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -158,27 +158,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MultilayerPerceptron(keras.Model):  # Subclassing\n",
     "    \n",
-    "    def __init__(self, dim_output, dim_hidden):\n",
+    "    def __init__(self, dim_output, dim_hidden, num_layers=1, activation=keras.activations.linear):\n",
     "        super(MultilayerPerceptron, self).__init__(name='multilayer_perceptron')\n",
     "        self.dim_output = dim_output\n",
     "        self.dim_hidden = dim_hidden\n",
     "\n",
     "        # Within Model.__init__ we initialize all the layers we will use\n",
-    "        self.layer_1 = keras.layers.Dense(\n",
-    "            units=dim_hidden)  # units = how many neurons in the layer\n",
-    "        self.layer_2 = keras.layers.Dense(\n",
-    "            units=dim_output)\n",
+    "        self.hidden_layers = []\n",
+    "        for _ in range(num_layers):\n",
+    "            layer = keras.layers.Dense(units=dim_hidden, activation=activation)\n",
+    "            self.hidden_layers.append(layer)\n",
+    "        self.layer_o = keras.layers.Dense(units=dim_output, activation=keras.activations.softmax)\n",
     "\n",
     "    def call(self, x):  # call defines the flow of the computation, e.g. in this particular model\n",
     "                        # we simply call the two layers one after the oter\n",
-    "        h = self.layer_1(x)\n",
-    "        y = self.layer_2(h)\n",
+    "        h = x\n",
+    "        for layer in self.hidden_layers:\n",
+    "            h = layer(h)\n",
+    "        y = self.layer_o(h)\n",
     "        return y\n"
    ]
   },
@@ -220,9 +223,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 150 samples\n",
+      "Epoch 1/20\n",
+      "150/150 [==============================] - 0s 3ms/sample - loss: 0.4304 - accuracy: 0.3333\n",
+      "Epoch 2/20\n",
+      "150/150 [==============================] - 0s 354us/sample - loss: 0.4238 - accuracy: 0.3333\n",
+      "Epoch 3/20\n",
+      "150/150 [==============================] - 0s 397us/sample - loss: 0.4160 - accuracy: 0.3333\n",
+      "Epoch 4/20\n",
+      "150/150 [==============================] - 0s 338us/sample - loss: 0.4105 - accuracy: 0.3333\n",
+      "Epoch 5/20\n",
+      "150/150 [==============================] - 0s 340us/sample - loss: 0.4056 - accuracy: 0.3333\n",
+      "Epoch 6/20\n",
+      "150/150 [==============================] - 0s 348us/sample - loss: 0.3981 - accuracy: 0.3200\n",
+      "Epoch 7/20\n",
+      "150/150 [==============================] - 0s 391us/sample - loss: 0.3844 - accuracy: 0.3200\n",
+      "Epoch 8/20\n",
+      "150/150 [==============================] - 0s 333us/sample - loss: 0.3597 - accuracy: 0.2933\n",
+      "Epoch 9/20\n",
+      "150/150 [==============================] - 0s 330us/sample - loss: 0.3326 - accuracy: 0.1267\n",
+      "Epoch 10/20\n",
+      "150/150 [==============================] - 0s 354us/sample - loss: 0.3115 - accuracy: 0.3067\n",
+      "Epoch 11/20\n",
+      "150/150 [==============================] - 0s 331us/sample - loss: 0.2953 - accuracy: 0.3267\n",
+      "Epoch 12/20\n",
+      "150/150 [==============================] - 0s 427us/sample - loss: 0.2790 - accuracy: 0.3333\n",
+      "Epoch 13/20\n",
+      "150/150 [==============================] - 0s 335us/sample - loss: 0.2652 - accuracy: 0.3333\n",
+      "Epoch 14/20\n",
+      "150/150 [==============================] - 0s 299us/sample - loss: 0.2527 - accuracy: 0.3333\n",
+      "Epoch 15/20\n",
+      "150/150 [==============================] - 0s 311us/sample - loss: 0.2370 - accuracy: 0.3000\n",
+      "Epoch 16/20\n",
+      "150/150 [==============================] - 0s 306us/sample - loss: 0.2223 - accuracy: 0.4733\n",
+      "Epoch 17/20\n",
+      "150/150 [==============================] - 0s 340us/sample - loss: 0.2071 - accuracy: 0.3867\n",
+      "Epoch 18/20\n",
+      "150/150 [==============================] - 0s 405us/sample - loss: 0.1941 - accuracy: 0.5733\n",
+      "Epoch 19/20\n",
+      "150/150 [==============================] - 0s 358us/sample - loss: 0.1822 - accuracy: 0.6467\n",
+      "Epoch 20/20\n",
+      "150/150 [==============================] - 0s 345us/sample - loss: 0.1719 - accuracy: 0.6733\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7ff31c78fdd8>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = MultilayerPerceptron(  # We create a new model\n",
     "    dim_output=3,\n",
@@ -260,9 +323,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 150 samples\n",
+      "Epoch 1/20\n",
+      "150/150 [==============================] - 0s 3ms/sample - loss: 0.2663 - accuracy: 0.3333\n",
+      "Epoch 2/20\n",
+      "150/150 [==============================] - 0s 426us/sample - loss: 0.2544 - accuracy: 0.3333\n",
+      "Epoch 3/20\n",
+      "150/150 [==============================] - 0s 424us/sample - loss: 0.2484 - accuracy: 0.3333\n",
+      "Epoch 4/20\n",
+      "150/150 [==============================] - 0s 435us/sample - loss: 0.2444 - accuracy: 0.3333\n",
+      "Epoch 5/20\n",
+      "150/150 [==============================] - 0s 355us/sample - loss: 0.2409 - accuracy: 0.3200\n",
+      "Epoch 6/20\n",
+      "150/150 [==============================] - 0s 435us/sample - loss: 0.2377 - accuracy: 0.3333\n",
+      "Epoch 7/20\n",
+      "150/150 [==============================] - 0s 413us/sample - loss: 0.2341 - accuracy: 0.3467\n",
+      "Epoch 8/20\n",
+      "150/150 [==============================] - 0s 383us/sample - loss: 0.2314 - accuracy: 0.3400\n",
+      "Epoch 9/20\n",
+      "150/150 [==============================] - 0s 389us/sample - loss: 0.2291 - accuracy: 0.3467\n",
+      "Epoch 10/20\n",
+      "150/150 [==============================] - 0s 373us/sample - loss: 0.2271 - accuracy: 0.3533\n",
+      "Epoch 11/20\n",
+      "150/150 [==============================] - 0s 327us/sample - loss: 0.2257 - accuracy: 0.3800\n",
+      "Epoch 12/20\n",
+      "150/150 [==============================] - 0s 376us/sample - loss: 0.2245 - accuracy: 0.3800\n",
+      "Epoch 13/20\n",
+      "150/150 [==============================] - 0s 366us/sample - loss: 0.2239 - accuracy: 0.3400\n",
+      "Epoch 14/20\n",
+      "150/150 [==============================] - 0s 389us/sample - loss: 0.2234 - accuracy: 0.3933\n",
+      "Epoch 15/20\n",
+      "150/150 [==============================] - 0s 326us/sample - loss: 0.2231 - accuracy: 0.3667\n",
+      "Epoch 16/20\n",
+      "150/150 [==============================] - 0s 362us/sample - loss: 0.2229 - accuracy: 0.3667\n",
+      "Epoch 17/20\n",
+      "150/150 [==============================] - 0s 352us/sample - loss: 0.2228 - accuracy: 0.3933\n",
+      "Epoch 18/20\n",
+      "150/150 [==============================] - 0s 349us/sample - loss: 0.2227 - accuracy: 0.3400\n",
+      "Epoch 19/20\n",
+      "150/150 [==============================] - 0s 369us/sample - loss: 0.2227 - accuracy: 0.3533\n",
+      "Epoch 20/20\n",
+      "150/150 [==============================] - 0s 374us/sample - loss: 0.2225 - accuracy: 0.3933\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7ff31c0fdc18>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = MultilayerPerceptron(\n",
     "    dim_output=3,\n",
@@ -308,9 +431,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 120 samples, validate on 30 samples\n",
+      "Epoch 1/20\n",
+      "120/120 [==============================] - 0s 3ms/sample - loss: 0.2453 - accuracy: 0.3417 - val_loss: 0.2478 - val_accuracy: 0.3000\n",
+      "Epoch 2/20\n",
+      "120/120 [==============================] - 0s 608us/sample - loss: 0.2439 - accuracy: 0.3417 - val_loss: 0.2460 - val_accuracy: 0.3000\n",
+      "Epoch 3/20\n",
+      "120/120 [==============================] - 0s 561us/sample - loss: 0.2426 - accuracy: 0.3417 - val_loss: 0.2445 - val_accuracy: 0.3000\n",
+      "Epoch 4/20\n",
+      "120/120 [==============================] - 0s 510us/sample - loss: 0.2414 - accuracy: 0.3417 - val_loss: 0.2430 - val_accuracy: 0.3000\n",
+      "Epoch 5/20\n",
+      "120/120 [==============================] - 0s 522us/sample - loss: 0.2403 - accuracy: 0.3417 - val_loss: 0.2417 - val_accuracy: 0.3000\n",
+      "Epoch 6/20\n",
+      "120/120 [==============================] - 0s 491us/sample - loss: 0.2393 - accuracy: 0.3417 - val_loss: 0.2405 - val_accuracy: 0.3000\n",
+      "Epoch 7/20\n",
+      "120/120 [==============================] - 0s 554us/sample - loss: 0.2382 - accuracy: 0.3417 - val_loss: 0.2393 - val_accuracy: 0.3000\n",
+      "Epoch 8/20\n",
+      "120/120 [==============================] - 0s 599us/sample - loss: 0.2373 - accuracy: 0.3417 - val_loss: 0.2382 - val_accuracy: 0.3000\n",
+      "Epoch 9/20\n",
+      "120/120 [==============================] - 0s 687us/sample - loss: 0.2364 - accuracy: 0.3417 - val_loss: 0.2371 - val_accuracy: 0.3000\n",
+      "Epoch 10/20\n",
+      "120/120 [==============================] - 0s 558us/sample - loss: 0.2356 - accuracy: 0.3417 - val_loss: 0.2362 - val_accuracy: 0.3000\n",
+      "Epoch 11/20\n",
+      "120/120 [==============================] - 0s 509us/sample - loss: 0.2347 - accuracy: 0.3417 - val_loss: 0.2352 - val_accuracy: 0.3000\n",
+      "Epoch 12/20\n",
+      "120/120 [==============================] - 0s 555us/sample - loss: 0.2340 - accuracy: 0.3417 - val_loss: 0.2343 - val_accuracy: 0.3000\n",
+      "Epoch 13/20\n",
+      "120/120 [==============================] - 0s 544us/sample - loss: 0.2331 - accuracy: 0.3417 - val_loss: 0.2335 - val_accuracy: 0.3000\n",
+      "Epoch 14/20\n",
+      "120/120 [==============================] - 0s 509us/sample - loss: 0.2323 - accuracy: 0.3417 - val_loss: 0.2326 - val_accuracy: 0.3000\n",
+      "Epoch 15/20\n",
+      "120/120 [==============================] - 0s 516us/sample - loss: 0.2316 - accuracy: 0.3417 - val_loss: 0.2318 - val_accuracy: 0.3000\n",
+      "Epoch 16/20\n",
+      "120/120 [==============================] - 0s 511us/sample - loss: 0.2309 - accuracy: 0.3417 - val_loss: 0.2311 - val_accuracy: 0.3000\n",
+      "Epoch 17/20\n",
+      "120/120 [==============================] - 0s 555us/sample - loss: 0.2302 - accuracy: 0.3417 - val_loss: 0.2304 - val_accuracy: 0.3000\n",
+      "Epoch 18/20\n",
+      "120/120 [==============================] - 0s 512us/sample - loss: 0.2296 - accuracy: 0.3417 - val_loss: 0.2297 - val_accuracy: 0.3000\n",
+      "Epoch 19/20\n",
+      "120/120 [==============================] - 0s 527us/sample - loss: 0.2289 - accuracy: 0.3417 - val_loss: 0.2290 - val_accuracy: 0.3000\n",
+      "Epoch 20/20\n",
+      "120/120 [==============================] - 0s 545us/sample - loss: 0.2283 - accuracy: 0.3417 - val_loss: 0.2284 - val_accuracy: 0.3000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7ff2f43783c8>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = MultilayerPerceptron(\n",
     "    dim_output=3,\n",
@@ -342,9 +525,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7ff2b96aa470>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = MultilayerPerceptron(\n",
     "    dim_output=3,\n",
@@ -384,9 +578,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 61), started 1:05:10 ago. (Use '!kill 61' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-2dfb7c3f14ddb3b9\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-2dfb7c3f14ddb3b9\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          url.port = 6006;\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%tensorboard --logdir logs --bind_all"
    ]
@@ -417,9 +644,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Layer multilayer_perceptron is casting an input tensor from dtype float64 to the layer's dtype of float32, which is new behavior in TensorFlow 2.  The layer has dtype float32 because it's dtype defaults to floatx.\n",
+      "\n",
+      "If you intended to run this layer in float32, you can safely ignore this warning. If in doubt, this warning is likely only an issue if you are porting a TensorFlow 1.X model to TensorFlow 2.\n",
+      "\n",
+      "To change all layers to have dtype float64 by default, call `tf.keras.backend.set_floatx('float64')`. To change just this layer, pass dtype='float64' to the layer constructor. If you are the author of this layer, you can disable autocasting by passing autocast=False to the base Layer constructor.\n",
+      "\n",
+      "Epoch: 0 Loss: 0.3324832\n",
+      "Epoch: 1 Loss: 0.2617142\n",
+      "Epoch: 2 Loss: 0.16195057\n",
+      "Epoch: 3 Loss: 0.13432351\n",
+      "Epoch: 4 Loss: 0.12554379\n",
+      "Epoch: 5 Loss: 0.119047165\n",
+      "Epoch: 6 Loss: 0.114001796\n",
+      "Epoch: 7 Loss: 0.10989445\n",
+      "Epoch: 8 Loss: 0.10641589\n",
+      "Epoch: 9 Loss: 0.10337446\n",
+      "Epoch: 10 Loss: 0.100647815\n",
+      "Epoch: 11 Loss: 0.09815552\n",
+      "Epoch: 12 Loss: 0.09584325\n",
+      "Epoch: 13 Loss: 0.09367351\n",
+      "Epoch: 14 Loss: 0.091619775\n",
+      "Epoch: 15 Loss: 0.08966307\n",
+      "Epoch: 16 Loss: 0.0877894\n",
+      "Epoch: 17 Loss: 0.08598843\n",
+      "Epoch: 18 Loss: 0.08425234\n",
+      "Epoch: 19 Loss: 0.082575135\n",
+      "Epoch: 20 Loss: 0.08095212\n",
+      "Epoch: 21 Loss: 0.07937958\n",
+      "Epoch: 22 Loss: 0.07785457\n",
+      "Epoch: 23 Loss: 0.07637461\n",
+      "Epoch: 24 Loss: 0.07493768\n",
+      "Epoch: 25 Loss: 0.073542036\n",
+      "Epoch: 26 Loss: 0.07218617\n",
+      "Epoch: 27 Loss: 0.07086872\n",
+      "Epoch: 28 Loss: 0.0695885\n",
+      "Epoch: 29 Loss: 0.06834439\n",
+      "Epoch: 30 Loss: 0.067135386\n",
+      "Epoch: 31 Loss: 0.06596047\n",
+      "Epoch: 32 Loss: 0.06481878\n",
+      "Epoch: 33 Loss: 0.06370938\n",
+      "Epoch: 34 Loss: 0.06263143\n",
+      "Epoch: 35 Loss: 0.061584115\n",
+      "Epoch: 36 Loss: 0.06056659\n",
+      "Epoch: 37 Loss: 0.059578076\n",
+      "Epoch: 38 Loss: 0.058617774\n",
+      "Epoch: 39 Loss: 0.057684924\n",
+      "Epoch: 40 Loss: 0.056778755\n",
+      "Epoch: 41 Loss: 0.055898547\n",
+      "Epoch: 42 Loss: 0.055043556\n",
+      "Epoch: 43 Loss: 0.054213047\n",
+      "Epoch: 44 Loss: 0.05340632\n",
+      "Epoch: 45 Loss: 0.052622695\n",
+      "Epoch: 46 Loss: 0.051861465\n",
+      "Epoch: 47 Loss: 0.05112198\n",
+      "Epoch: 48 Loss: 0.05040356\n",
+      "Epoch: 49 Loss: 0.04970558\n",
+      "Epoch: 50 Loss: 0.04902741\n",
+      "Epoch: 51 Loss: 0.04836844\n",
+      "Epoch: 52 Loss: 0.04772806\n",
+      "Epoch: 53 Loss: 0.047105692\n",
+      "Epoch: 54 Loss: 0.04650077\n",
+      "Epoch: 55 Loss: 0.045912728\n",
+      "Epoch: 56 Loss: 0.045341033\n",
+      "Epoch: 57 Loss: 0.044785164\n",
+      "Epoch: 58 Loss: 0.044244602\n",
+      "Epoch: 59 Loss: 0.04371887\n",
+      "Epoch: 60 Loss: 0.043207463\n",
+      "Epoch: 61 Loss: 0.042709935\n",
+      "Epoch: 62 Loss: 0.042225827\n",
+      "Epoch: 63 Loss: 0.041754697\n",
+      "Epoch: 64 Loss: 0.041296124\n",
+      "Epoch: 65 Loss: 0.04084971\n",
+      "Epoch: 66 Loss: 0.04041504\n",
+      "Epoch: 67 Loss: 0.039991736\n",
+      "Epoch: 68 Loss: 0.03957945\n",
+      "Epoch: 69 Loss: 0.039177798\n",
+      "Epoch: 70 Loss: 0.038786437\n",
+      "Epoch: 71 Loss: 0.038405042\n",
+      "Epoch: 72 Loss: 0.038033288\n",
+      "Epoch: 73 Loss: 0.037670847\n",
+      "Epoch: 74 Loss: 0.03731745\n",
+      "Epoch: 75 Loss: 0.03697278\n",
+      "Epoch: 76 Loss: 0.036636557\n",
+      "Epoch: 77 Loss: 0.036308534\n",
+      "Epoch: 78 Loss: 0.03598844\n",
+      "Epoch: 79 Loss: 0.035676006\n",
+      "Epoch: 80 Loss: 0.03537102\n",
+      "Epoch: 81 Loss: 0.03507322\n",
+      "Epoch: 82 Loss: 0.0347824\n",
+      "Epoch: 83 Loss: 0.034498353\n",
+      "Epoch: 84 Loss: 0.034220822\n",
+      "Epoch: 85 Loss: 0.03394966\n",
+      "Epoch: 86 Loss: 0.033684634\n",
+      "Epoch: 87 Loss: 0.03342557\n",
+      "Epoch: 88 Loss: 0.03317229\n",
+      "Epoch: 89 Loss: 0.032924607\n",
+      "Epoch: 90 Loss: 0.032682367\n",
+      "Epoch: 91 Loss: 0.032445405\n",
+      "Epoch: 92 Loss: 0.03221356\n",
+      "Epoch: 93 Loss: 0.03198667\n",
+      "Epoch: 94 Loss: 0.031764615\n",
+      "Epoch: 95 Loss: 0.031547222\n",
+      "Epoch: 96 Loss: 0.031334385\n",
+      "Epoch: 97 Loss: 0.031125959\n",
+      "Epoch: 98 Loss: 0.030921815\n",
+      "Epoch: 99 Loss: 0.030721826\n"
+     ]
+    }
+   ],
    "source": [
     "model = MultilayerPerceptron(\n",
     "    dim_output=3,\n",
