--- a/week_6/week_6.ipynb
+++ b/week_6/week_6.ipynb
@@ -6,47 +6,48 @@
    "source": [
     "# Week 6\n",
     "\n",
-    "goal\n",
+    "__Goals for this week__\n",
     "\n",
-    "feedback\n",
+    "We will talk about best practices for deep learning development - how to use cloud for training, how to manage your projects and how to gradually improve your model. Hopefully these will help you with your future projects.\n",
+    "\n",
+    "__Feedback__\n",
+    "\n",
+    "This lab is a work in progress. If you notice a mistake, notify us or you can even make a pull request. Also please fill the [questionnaire](https://forms.gle/r27nBAvnMC7jbjJ58) after you finish this lab to give us feedback.\n",
     "\n",
     "\n",
     "## Project reminder\n",
     "\n",
-    "Last 4 labs of the semester will be focused on your projects alone. First, in 9th and 10th ...\n",
-    "\n",
-    "Checkpoint - data analysis, model complete, at least one serious training run\n",
-    "\n",
-    "How would you prefer it - joint submission / by week submission?\n",
-    "random assignment / subscribing\n",
+    "- 9th/10th week is project checkpoint - data analysis, baseline model trained\n",
+    "- 11th/12th week is project final submission - completed experiments, thorough documentation of your work\n",
     "\n",
     "\n",
-    "## Google Cloud Platform and training on a GPU\n",
+    "## Google Cloud Platform\n",
     "\n",
-    "How does GCP work?\n",
-    "GCP tutorial\n",
+    "Hardware accelerators, such as GPUs, are necessary for deep learning projects. Not all of you have GPU time available. Instead, we partner up with Google to provide you with cloud-based GPU computing. Check [our tutorial](../project/gcp.ipynb) to see how to setup your own GCP-based virtual machine with GPU. This should help you with your compute requirements, but we are ready to provide you with additioanl resources, if you go through the credit we gave you.\n",
     "\n",
-    "1. start VM\n",
-    "2. connect to VM\n",
-    "3. start docker\n",
-    "4. connect to docker\n",
-    "5. git pull\n",
-    "6. run a training command\n",
-    "    meantime. Ctrl+p, ctrl+q - leave docker running\n",
-    "    log back and check what is happening\n",
+    "## Training in cloud\n",
     "\n",
-    "TF and GPU - Most of TF is GPU compliant - what you code in TF can be run on GPUs - much faster than computing at CPUs\n",
+    "In this section we provide some tips on how to approach development and training of your model in the cloud. GPU time is expensive, so it does make sense to be careful with what you deploy and how you deploy it. The tips here and in following sections are guidelines for you, you do not have to follow them all, although I would recommend it.\n",
     "\n",
-    " 1. develop locally, if it really works, run tests on clouds\n",
+    "### 1. Use Docker for your environment\n",
+    "\n",
+    "Docker is a great way of having unified environment on your personal computers and in the cloud as well. TensorFlow has many different tags in their DockerHub repository. `tensorflow:2.0.0-gpu-py3` is a repository with newest. `gpu` grants you GPU support and `py3` makes it run on Python 3.6. The docker image we use during our labs is derived from these.\n",
+    "\n",
+    "The training can take several hours, you want to have your docker image running even when you do not have it open in your terminal. You can keep your notebook running in the background by pressing `Ctrl+P` and `Ctrl+Q` and then come back to it via `docker attach`. This [Microsoft tutorial](https://blogs.technet.microsoft.com/machinelearning/2018/03/15/demystifying-docker-for-data-scientists-a-docker-tutorial-for-your-deep-learning-projects/) shows how to use Docker for machine learning projects.\n",
+    "\n",
+    "If you want to have more control, e.g. add additional libraries, create your own `Dockerfile`. To create your own check out [this tutorial](https://rominirani.com/docker-tutorial-series-writing-a-dockerfile-ce5746617cd) by Romin Irani, or check how does the Dockerfile look like in the repository of this course (`backstage/docker/Dockerfile`).\n",
     " \n",
-    " https://www.tensorflow.org/guide/gpu\n",
+    "### 2. Utilize your GPUs\n",
     "\n",
+    "TensorFlow code can run on GPU by default, you do not need to change anything in your code. If you want to run it from docker, you need to have `nvidia-docker` installed, otherwise you do not see the GPU from the container. You can see [TensorFlow GPU guide](https://www.tensorflow.org/guide/gpu) for more information.\n",
     "\n",
-    "Use GCP for final training, not for development\n",
-    "Docker images will help you keep unified environment, if it works on your machine, it should work in VM as well.\n",
-    "Check whether GPU is being used nvidia-smi, if the usage is too small, perhaps you have slow data processing pipeline.\n",
-    "Develop locally, train in cloud\n",
-    "You can use your on GPU, but we recommend it only if you have something powerful (8GB VRAM), otherwise you can do some smaller training run, but it will probably be slow and the memory will be limiting\n",
+    "After you start your training, you can check how much is your GPU used using tool called `nvidia-smi`. `GPU-Util` is the information you are most interested in. It tells you how much do you use your GPU. If you have a small usage, e.g. below 20%, it is possible that you keep needlessly waiting for your data pre-processing. In that case you should optimize your code.\n",
+    "\n",
+    "You can use your own GPUs, but if you might be limited by small VRAM memory size. Keeping all the parameters and intermediate results needed for back-propagation can fill it quite easily.\n",
+    "\n",
+    "### 3. Develop locally, train in cloud\n",
+    "\n",
+    "You should develop your model locally on your personal machine. Bother with cloud training only when you have your model ready for some serious training. This saves GPU time, but it also lets you develop your model further while the model trains.\n",
     "\n",
     "\n",
     "## Project management\n",
@@ -144,44 +145,42 @@
     "\n",
     "Note that you should have your model definition, training loops and data processing pipeline in normal Python scripts. Jupyter notebook is a great tool for communication and data visualization, but I would not recommend to implement your whole project in it. This usually results in a so called _Big Ass Script_ architecture. This is considered to be a development anti-pattern. \n",
     " \n",
-    "## How to grow your model\n",
+    "## Growing your model\n",
     "\n",
-    "There is a lot of options when starting a deep learning project. You have to design a model, choose a optimizer algorithm, propose data representation, pick an evaluation metrics, choose some form of regularization, etc. The sheer number of options can be overwhelming. Even if you pick some, it is hard to tell, what to change if you fail to train your model.\n",
+    "There is a lot of devicions you need to make when you start a deep learning project. You have to design a model, choose a optimizer algorithm, propose data representation, pick an evaluation metrics, choose some form of regularization, etc. The sheer number of decisions can be overwhelming. Even if you pick some, it is hard to tell, what to change if you fail to train your model.\n",
     "\n",
-    "Another problem with developing deep learning models is that they can fail silently. The fact that no exception was raised during the training does not mean that the training is done correctly. You can feed wrong data in wrong format, you can fail to calculate your loss or minimize it properly, you can miscalculate you evaluation metrics, etc.\n",
+    "Another problem with developing deep learning models is that they can fail silently. The fact that no exception was raised during the training does not mean that the training is done correctly. You can feed wrong data in wrong format, you can fail to calculate your loss or minimize it properly, you can miscalculate you evaluation metrics, etc. In this section we mention few tricks that can help you with these problems.\n",
     "\n",
     "### 1. Build infrastructure first\n",
     "\n",
-    "1. Setup the whole process - feeding data, training, evaluation, logs, model saving, etc. and use it with the simplest model possible\n",
+    "Before you start experimenting with your problem, make sure you have the code infrastructure ready. Data processing pipeline, evaluation metrics calculation, results logging, model saving, hyperparameter management, etc. It is recommended to have this infrastructure set up before you start your training. This backbone can save you tremendous amount of time later on that you would spend on debugging and redoing calculations.\n",
     "\n",
     "### 2. From training to testing data\n",
     "\n",
-    "You should start with a very simple model -- a reasonable baseline -- that can fit your data.\n",
+    "#### Starting with few batches\n",
+    "When I implement a model, before running a full-blown experiment, I like to make sure that it at least seems to be able of learning. For this I try to __overfit it on a very small number (tens) of training samples.__ For this I also often use small version of model, i.e. relatively small hidden layer sizes etc. If the model is not able to get a good performance or decrease loss on a small number of samples, it won't work on full training set either. It usually means that there is a logical error in implementation that should be addressed. This preliminary test serves as a kind of sanity check and can be done locally on your personal computers.\n",
     "\n",
-    "Try to fit one batch by showing it over and over again. This is a sanity check, does your model work? Is it able to learn? This can be all done locally\n",
+    "#### Training with full training set\n",
+    "After you establish that your model works, you can normally train it on your training dataset using GPUs. You should worry first about your __performance on the training set__. If you are not able to achieve good performance on your training data, you have no chance of achieving it on test data. Bad training set results might indicate that your model is too small (try making it bigger), it is not trained properly (try changing hyperparameters), or even that you do not feed it with data correctly (try checking what comes in and what comes out). You can assess what are good results by looking what other people get with similar data or on similar tasks.\n",
     "\n",
-    "Then try to fit training data - are you able to achieve expected performance? Now you probably need GPU\n",
+    "#### Improving results on test set\n",
+    "After you make sure that you can fit training data, you can start worrying about __how well does your model generalize on test set__. If your test set lags significantly behind your training set, you are probably overfitting, i.e. you are memorizing training data and the knowledge you have learned does not work on previously unseen data. You can solve this problem by using more training data, using data augmentation techniques on existing data, or by employing regularization techniques.\n",
     "\n",
-    "If not you have high bias: bigger model, hparam tuning, maybe your model is not good for this\n",
+    "#### Summary\n",
     "\n",
-    "Then you concern yourself with testing data - do you generalize well?\n",
-    "\n",
-    "If not: regularization, more data, data augmentation\n",
+    "1. __Several training samples__ - Is the model working? Solve with debugging and code review.\n",
+    "2. __Training set__ - Does it have enough capacity? Solve by making the model bigger and playing with optimization hyperparameters.\n",
+    "3. __Testing set__ - Can it generalize well? Solve by adding more data (including using data augmentation) or by using regularization.\n",
     "\n",
     "### 3. From simple to complex model\n",
     "\n",
-    "Similarly, when you work on ML project, start with simple baseline to find out what results can you expect. Then add additional complexity and you can compare to this baseline and see whether they are worth it or not.\n",
+    "You should start with a very simple model to establish a baseline you can improve. It can be a linear regression, simple convolutional network or something similar that you can code very easily. Only then start adding complexity, making the model bigger and adding additional parts.\n",
     "\n",
     "## Further Reading\n",
     "\n",
-    "Karpatys blog\n",
-    "http://karpathy.github.io/2019/04/25/recipe/\n",
-    "\n",
-    "Ng's third course\n",
-    "...\n",
-    "\n",
-    "Coockiecutter machine learning project structure\n",
-    "https://drivendata.github.io/cookiecutter-data-science/#opinions\n"
+    "- Andrej Karpathy, a Slovak that currently leads the development of Tesla's autonomous driving, has a nice [blog](http://karpathy.github.io/2019/04/25/recipe/) about neural network development, where he discusses how to debug and grow your models.\n",
+    "- DataDriven published [their version](https://drivendata.github.io/cookiecutter-data-science) of how should a data science working directory looks like.\n",
+    "- [Third course from Coursera's Deep Learning specialization](https://www.youtube.com/playlist?list=PLkDaE6sCZn6E7jZ9sN_xHwSHOdjUxUW_b) by Andrew Ng deals with how you should manage your machine learning projects \n"
    ]
   },
   {
